--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
+<!--
+  sección 4
+
 <h1>{{ title }}</h1>
 <hr>
 
@@ -5,5 +8,10 @@
 <app-counter></app-counter>
 
 <app-heroes-hero></app-heroes-hero>
-<app-heroes-list></app-heroes-list>
+<app-heroes-list></app-heroes-list> -->
+
+
+<!-- Sección 5 -->
+
+<app-dbz-main-page></app-dbz-main-page>
 
