--- a/src/app/dbz/components/add-character/add-character.component.html
+++ b/src/app/dbz/components/add-character/add-character.component.html
@@ -25,6 +25,6 @@ action=""
     Agregar
   </button>
 
-  <pre>{{ character | json }}</pre>
+  <!-- <pre>{{ character | json }}</pre> -->
 
 </form>
