--- a/src/app/dbz/components/list/list.component.html
+++ b/src/app/dbz/components/list/list.component.html
@@ -1,26 +1,28 @@
 <h4>Listado</h4>
-    <ul class="list-group">
-      <li
-      *ngFor="
+<ul class="list-group">
+  <li
+    *ngFor="
       let character of characterList;
       let i = index;
       let isFirst = first;
       let isLast = last;
       let isEven = even;
-      let isOdd = odd"
-      class="list-group-item "
-      [ngClass]="{
-         'list-group-item-success': isFirst,
-         'list-group-item-dark': isLast
-        }"
-      > <!-- list-group-item-success -->
+      let isOdd = odd
+    "
+    class="list-group-item d-flex justify-content-between align-items-center"
+    [ngClass]="{
+      'list-group-item-success': isFirst,
+      'list-group-item-dark': isLast
+    }"
+  >
+    <!-- list-group-item-success -->
 
-      <span class="text-primary">{{i + 1}}. </span>
-      <span>{{character.name}}</span>
-      -
-      <strong>Power:</strong>
-       {{character.power}}
+    <div>
+      <span class="text-primary">{{ i + 1 }}. </span>
+      <span>{{ character.name }} - </span>
+      <strong>Power: {{ character.power }}</strong>
+    </div>
 
-      </li>
-
-    </ul>
+    <button (click)="onDeleteCharacter(character.id)" class="btn btn-danger">X</button>
+  </li>
+</ul>
