--- a/src/app/dbz/pages/main-page.component.html
+++ b/src/app/dbz/pages/main-page.component.html
@@ -5,13 +5,13 @@
 <div class="row">
   <div class="col">
 
-    <dbz-list [characterList]="characters"></dbz-list>
+    <dbz-list (onDelete)="onDeleteCharacter($event)" [characterList]="characters"></dbz-list> 
 
   </div>
 
   <div class="col">
 
-    <dbz-add-character (onNewCharacter)="onNewCharacter($event)" ></dbz-add-character>
+    <dbz-add-character (onNewCharacter)="onNewCharacter($event)" ></dbz-add-character> 
 
   </div>
 
